class routes added
